手写Server之添加多线程和反射

--- a/8.Server/src/xmls/web.xml
+++ b/8.Server/src/xmls/web.xml
@@ -2,11 +2,11 @@
  <web-app>
  <servlet>
   <servlet-name>login</servlet-name>
-  <servlet-class>com.zw.server.LoginServlet</servlet-class>
+  <servlet-class>com.zw.server.LoginServlet03</servlet-class>
  </servlet>
    <servlet>
   <servlet-name>reg</servlet-name>
-  <servlet-class>com.zw.server.RegisterServlet</servlet-class>
+  <servlet-class>com.zw.server.RegisterServlet03</servlet-class>
  </servlet>   
  <servlet-mapping>
   <servlet-name>login</servlet-name>
