--- a/13.SORM/src/db.properties
+++ b/13.SORM/src/db.properties
@@ -5,3 +5,6 @@ driver = com.mysql.cj.jdbc.Driver
 url = jdbc:mysql://localhost:3306/JavaBase
 user = root
 password = 123456
+queryClass = com.zw.sorm.core.MySqlQuery
+poolMaxSize = 100
+poolMinSize = 10
