J2EE-框架-Spring整合MyBatisDemo

--- a/23.Spring/web/WEB-INF/web.xml
+++ b/23.Spring/web/WEB-INF/web.xml
@@ -5,9 +5,19 @@
          version="4.0">
     <context-param>
         <param-name>contextConfigLocation</param-name>
-        <param-value>classpath:com/zw/springwithmybatis/xml/ApplicationContext.xml</param-value>
+        <param-value>classpath:com/zw/smdemo/login/xml/ApplicationContext.xml</param-value>
     </context-param>
     <listener>
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
     </listener>
+    <welcome-file-list>
+        <welcome-file>/code/login.jsp</welcome-file>
+    </welcome-file-list>
+<!--    <context-param>-->
+<!--        <param-name>contextConfigLocation</param-name>-->
+<!--        <param-value>classpath:com/zw/springwithmybatis/xml/ApplicationContext.xml</param-value>-->
+<!--    </context-param>-->
+<!--    <listener>-->
+<!--        <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>-->
+<!--    </listener>-->
 </web-app>
